# datar-pandas

./: .gitignore  README.md  pyproject.toml  setup.py  tox.ini
.codesandbox/: setup.sh
.github/workflows/: ci.yml
datar_pandas/: __init__.py  broadcast.py  collections.py  common.py  contexts.py  defaults.py  factory.py  middlewares.py  operators.py  pandas.py  plugin.py  tibble.py  typing.py  utils.py
datar_pandas/api/: arithm.py  data.py  misc.py  other.py
datar_pandas/api/base/: __init__.py  arithm.py  asis.py  bessel.py  complex.py  cum.py  factor.py  funs.py  null.py  random.py  seq.py  special.py  string.py  table.py  trig.py  verbs.py  which.py
datar_pandas/api/dplyr/: _rank.py  across.py  arrange.py  bind.py  context.py  count_tally.py  desc.py  distinct.py  filter_.py  funs.py  glimpse.py  group_by.py  group_data.py  group_iter.py  if_else.py  join.py  lead_lag.py  mutate.py  order_by.py  pick.py  pull.py  rank.py  recode.py  reframe.py  relocate.py  rename.py  rows.py  select.py  sets.py  slice_.py  summarise.py  tidyselect.py
datar_pandas/api/forcats/: fct_multi.py  lvl_addrm.py  lvl_order.py  lvl_value.py  lvls.py  misc.py  utils.py
datar_pandas/api/tibble/: tibble.py  verbs.py
datar_pandas/api/tidyr/: chop.py  complete.py  drop_na.py  expand.py  extract.py  fill.py  funs.py  nest.py  pack.py  pivot_long.py  pivot_wide.py  replace_na.py  separate.py  uncount.py  unite.py
datar_pandas/pandas/: __init__.py
datar_pandas/pandas/core/: base.py  generic.py  groupby.py
tests/: conftest.py  test_data.py  test_get_versions.py  test_misc.py  test_other.py
tests/base/: test_arithm.py  test_asis.py  test_bessel.py  test_complex.py  test_cum.py  test_factor.py  test_funs.py  test_random.py  test_seq.py  test_special.py  test_string.py  test_table.py  test_trig_hb.py  test_verbs.py  test_which.py
tests/core/: test_broadcast.py  test_collections.py  test_context.py  test_factory.py  test_operator.py  test_tibble.py  test_utils.py
tests/dplyr/: test_across.py  test_arrange.py  test_bind.py  test_coalesce.py  test_context.py  test_count.py  test_distinct.py  test_empty_groups.py  test_filter.py  test_funs.py  test_glimpse.py  test_group_by.py  test_group_iter.py  test_if_else.py  test_join.py  test_lead_lag.py  test_mutate.py  test_mutate_windowed.py  test_n_distinct.py  test_pick.py  test_pull.py  test_rank.py  test_recode.py  test_reframe.py  test_relocate.py  test_rename.py  test_rows.py  test_select.py  test_sets.py  test_slice.py  test_summarise.py
tests/forcats/: test_forcats_addrm.py  test_forcats_fct_multi.py  test_forcats_lvl_order.py  test_forcats_lvl_value.py  test_forcats_misc.py
tests/tibble/: test_tibble.py  test_verbs.py
tests/tidyr/: test_chop.py  test_complete.py  test_drop_na.py  test_expand.py  test_extract.py  test_fill.py  test_full_seq.py  test_nest.py  test_pack.py  test_pivot_long.py  test_pivot_wide.py  test_replace_na.py  test_separate.py  test_uncount.py  test_unite.py
