[tool.poetry]
name = "datar-pandas"
version = "0.4.0"
description = "The pandas backend for datar"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "datar_pandas"}]

[tool.poetry.dependencies]
python = "^3.8"
# requires pandas v2+
pdtypes = "^0.1"
datar = "^0.14"
pandas = "^1.4"
# datar = { path = "../datar" }
datar-numpy = { version = "^0.3", extras = ["all"] }
# datar-numpy = { path = "../datar-numpy", extras = ["all"] }
# modin = { version = "^0.10", optional = true }

# [tool.poetry.extras]
# modin = ["modin"]

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-cov = "^4"

[tool.poetry.plugins.datar]
pandas = "datar_pandas:plugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-vv --assert=plain -p no:asyncio -p no:xdist --tb=short --cov-config=.coveragerc --cov=datar_pandas --cov-report xml:cov.xml --cov-report term-missing"
# addopts = "-vv --assert=plain -p no:asyncio --tb=short -n 0"
filterwarnings = [
    # "ignore::UserWarning",
    # "ignore::RuntimeWarning",
    "ignore",
    # "error"
]
console_output_style = "progress"
junit_family = "xunit1"
