[project]
name = "datar-pandas"
version = "0.7.0"
description = "The pandas backend for datar"
authors = [{name = "pwwang", email = "pwwang@pwwang.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # requires pandas v2+
    "pdtypes>=0.3",
    "datar",
    "datar-numpy>=0.3.6,<0.4",
]

[project.optional-dependencies]
all = [
    "scipy>=1.8,<2",
    "wcwidth>=0.2,<0.3",
]

[project.entry-points.datar]
pandas = "datar_pandas:plugin"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "flake8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datar_pandas"]

[tool.pytest.ini_options]
addopts = "-vv --assert=plain -p no:asyncio -p no:xdist --tb=short --cov-config=.coveragerc --cov=datar_pandas --cov-report xml:cov.xml --cov-report term-missing"
# addopts = "-vv --assert=plain -p no:asyncio --tb=short -n 0"
filterwarnings = [
    # "ignore::UserWarning",
    # "ignore::RuntimeWarning",
    "ignore",
    # "error"
]
console_output_style = "progress"
junit_family = "xunit1"

[tool.pyright]
reportFunctionMemberAccess = false
